--- a/app/views/plants/new.html.erb
+++ b/app/views/plants/new.html.erb
@@ -1,6 +1,17 @@
 <h1>New Plant <3</h1>
 
 <%= form_with scope: :plant, url: plants_path, local: true do |form| %>
+
+  <% if @plant.errors.any? %>
+    <div id="error_explanation">
+      <ul>
+        <% @plant.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <p>
     <%= form.label :name %><br>
     <%= form.text_field :name %>
