--- a/app/views/plants/index.html.erb
+++ b/app/views/plants/index.html.erb
@@ -24,6 +24,7 @@
 
 
       <td><%= link_to 'Show', plant_path(plant) %></td>
+      <td><%= link_to 'Edit this plant', edit_plant_path(plant) %></td>
     </tr>
   <% end %>
 </table>
