add test and validation code to check email uniqueness

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,3 +1,5 @@
 <h1>Welcome to Planterscape!</h1>
 
-<%= link_to 'My Plants', plants_path %>
+<%= link_to 'My Plants', plants_path %><br>
+
+<%= link_to "Sign up now!", signup_path 
