--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -2,4 +2,4 @@
 
 <%= link_to 'My Plants', plants_path %><br>
 
-<%= link_to "Sign up now!", signup_path 
+<%= link_to "Sign up now!", signup_path %>
