--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,22 @@
-<h1>Sign up</h1>
+<% provide(:title, 'Sign up') %>
 
+<h1>Sign up</h1>
+  <%= form_for(@user, url: signup_path) do |f| %>
+
+    <%= render 'shared/form_error_messages' if @user.errors.any? %>
+
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+
+    <%= f.label :email %>
+    <%= f.email_field :email %>
+
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+
+    <%= f.label :password_confirmation, "Please confirm your password." %>
+    <%= f.password_field :password_confirmation %>
+
+    <%= f.submit "Create my account." %>
+  <% end %>
+ 
