--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,7 @@
         <% if logged_in? %>
           <li>
             <ul>
+              <%= link_to "Settings", edit_user_path(current_user) %>
               <li><%= link_to "Log out", logout_path, method: :delete %></li>
             </ul>
           </li>
